objects/Product2.object
<CustomObject>    
    <fields>
        <fullName>APTS_Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self Service</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Commercial_Change__c</fullName>
        <label>Commercial Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Enable_for_E_Commerce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable for E-Commerce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Exceptional_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exceptional Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Inactive__c</fullName>
        <label>Inactive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Visible</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>E-Forms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Main_Apttus_Configuration_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify Main Config. Bundle in environment</description>
        <label>APTS_Main Apttus Configuration Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_PS_Type__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Search_Tags__c</fullName>
        <label>Search Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Show_on_Template__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field willbe used to identify which Products need to be shown on Quote Document.</description>
        <label>Show on Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Technical_Change__c</fullName>
        <label>Technical Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Terminate__c</fullName>
        <label>Terminate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Type__c</fullName>
        <description>This field will be used to Identify Commercial Packages and Commercial Bundles</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial Bundle</fullName>
                </value>
                <value>
                    <fullName>Commercial Package</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ARIS_GUID__c</fullName>
        <externalId>true</externalId>
        <label>ARIS GUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Applicable_to_True_Sales_Commission__c</fullName>
        <description>CR #40119085</description>
        <label>Sales Commission Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3SKEY</fullName>
                </value>
                <value>
                    <fullName>AMH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>Cloud family</fullName>
                </value>
                <value>
                    <fullName>Compliance Analytics</fullName>
                </value>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>FIN Copy</fullName>
                </value>
                <value>
                    <fullName>Interfaces</fullName>
                </value>
                <value>
                    <fullName>KYC</fullName>
                </value>
                <value>
                    <fullName>My Standards</fullName>
                </value>
                <value>
                    <fullName>Sanctions Screening</fullName>
                </value>
                <value>
                    <fullName>Sanctions Testing</fullName>
                </value>
                <value>
                    <fullName>Support services</fullName>
                </value>
                <value>
                    <fullName>SWIFTRef</fullName>
                </value>
                <value>
                    <fullName>TSU</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BundleInvoiceLevel__c</fullName>
        <description>The invoice level associated with the bundle</description>
        <inlineHelpText>The invoice level associated with the bundle</inlineHelpText>
        <label>Bundle Invoice Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConfigurationType__c</fullName>
        <description>The product configuration type</description>
        <label>Configuration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standalone</fullName>
                    <default>true</default>
                    <label>Standalone</label>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customizable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product must be configured during selection.</description>
        <label>Must Configure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscontinuedDate__c</fullName>
        <description>The date when the product is pulled out and rendered unavailable for sale on the store</description>
        <inlineHelpText>The date when the product is pulled out and rendered unavailable for sale on the store</inlineHelpText>
        <label>Discontinued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <description>The product effective date. The product becomes available for selection on this date and time.</description>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EffectiveStartDate__c</fullName>
        <description>The start date of the product in a store</description>
        <inlineHelpText>The start date of the product in a store</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExcludeFromSitemap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product is listed for indexing by search engines.</description>
        <inlineHelpText>Indicates whether the product is listed for indexing by search engines.</inlineHelpText>
        <label>Exclude From Sitemap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <description>The product expiration date. The product is unavailable for selection after this date and time.</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HasAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has attributes.</description>
        <label>Has Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasDefaults__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has default rules</description>
        <label>Has Defaults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product has options.</description>
        <label>Has Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasSearchAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to true the product can be considered as base product for searching related products</description>
        <label>Has Search Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IconId__c</fullName>
        <description>The attachment object ID of the uploaded icon image file.</description>
        <label>Icon Image</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IconSize__c</fullName>
        <description>The actual size of the icon.</description>
        <inlineHelpText>The actual size of the icon.</inlineHelpText>
        <label>Actual Icon Size</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <description>Displays the icon uploaded using the icon button.</description>
        <formula>HYPERLINK( &quot;/apex/IconUploader?productId=&quot;+Id, IF(ISBLANK(IconId__c) , IMAGE(&quot;/resource/Image_UploadIcon&quot;, &quot;Upload Icon&quot;, 50, 50), IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+IconId__c , &quot;Icon&quot;, 50, 50)) , &quot;_top&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product Icon for display in application. Click on the icon to add/change the image.</inlineHelpText>
        <label>Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LaunchDate__c</fullName>
        <description>The date when the product is launched for selling.</description>
        <inlineHelpText>The date when the product is launched for selling.</inlineHelpText>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <description>The product type</description>
        <inlineHelpText>The product type</inlineHelpText>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Entitlement</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Wallet</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Professional Service</fullName>
                </value>
                <value>
                    <fullName>Support Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RenewalLeadTime__c</fullName>
        <description>The renewal lead time in days for the installed product</description>
        <inlineHelpText>The renewal lead time in days for the installed product</inlineHelpText>
        <label>Renewal Lead Time</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShowTabView__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the option groups in a tab view. Top level option groups are displayed as tabs.</description>
        <inlineHelpText>Check to show tab view. Top level option groups are displayed as tabs.</inlineHelpText>
        <label>Show Tab View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uom__c</fullName>
        <description>The default unit of measure for the product</description>
        <label>Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>1.00</defaultValue>
        <label>Version</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHEOPS_L2__c</fullName>
        <label>CHEOPS L2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Support and Care Services</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Applications and MIs</fullName>
                </value>
                <value>
                    <fullName>Channels and options</fullName>
                </value>
                <value>
                    <fullName>Connectivity</fullName>
                </value>
                <value>
                    <fullName>Data Analytics and Information Products</fullName>
                </value>
                <value>
                    <fullName>Financial Crime and Compliance Products</fullName>
                </value>
                <value>
                    <fullName>Interfaces and Software</fullName>
                </value>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>Shared Services - Other</fullName>
                </value>
                <value>
                    <fullName>t</fullName>
                    <isActive>false</isActive>
                    <label>t</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHEOPS_L5__c</fullName>
        <label>CHEOPS L5</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3SKEY</fullName>
                </value>
                <value>
                    <fullName>Advanced Support</fullName>
                </value>
                <value>
                    <fullName>Advisory Services-Other</fullName>
                    <label>Advisory Services</label>
                </value>
                <value>
                    <fullName>Alliance Access</fullName>
                </value>
                <value>
                    <fullName>Alliance Cloud</fullName>
                </value>
                <value>
                    <fullName>Alliance Connect</fullName>
                </value>
                <value>
                    <fullName>Alliance Connect and Other Connections</fullName>
                </value>
                <value>
                    <fullName>Alliance Entry</fullName>
                </value>
                <value>
                    <fullName>Alliance Gateway</fullName>
                </value>
                <value>
                    <fullName>Alliance Gateway Instant</fullName>
                </value>
                <value>
                    <fullName>Alliance Lifeline</fullName>
                </value>
                <value>
                    <fullName>Alliance Lite2</fullName>
                </value>
                <value>
                    <fullName>Alliance Managed Operations Delivery</fullName>
                </value>
                <value>
                    <fullName>Alliance Messaging Hub</fullName>
                    <isActive>false</isActive>
                    <label>Alliance Messaging Hub</label>
                </value>
                <value>
                    <fullName>Alliance Remote Gateway</fullName>
                </value>
                <value>
                    <fullName>Alliance RMA</fullName>
                </value>
                <value>
                    <fullName>Alliance Warehouse</fullName>
                </value>
                <value>
                    <fullName>AMH</fullName>
                </value>
                <value>
                    <fullName>AU-NPP Support</fullName>
                </value>
                <value>
                    <fullName>Bankers World Online</fullName>
                </value>
                <value>
                    <fullName>Banking Analytics</fullName>
                </value>
                <value>
                    <fullName>BIC Directories Online</fullName>
                </value>
                <value>
                    <fullName>BIC Registration</fullName>
                </value>
                <value>
                    <fullName>Business Learning Services</fullName>
                </value>
                <value>
                    <fullName>Care Services</fullName>
                </value>
                <value>
                    <fullName>Certification</fullName>
                </value>
                <value>
                    <fullName>Channels and options</fullName>
                </value>
                <value>
                    <fullName>CLS MI Channel</fullName>
                </value>
                <value>
                    <fullName>Compliance Analytics</fullName>
                </value>
                <value>
                    <fullName>Concurrent Sessions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Com_Plan_Category__c</fullName>
        <description>GDF 24/11 Added for Com Plan</description>
        <label>Com Plan Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Target</fullName>
                </value>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>Supplementary Product</fullName>
                </value>
                <value>
                    <fullName>Interfaces</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commercial_Product_link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Self Relationship</description>
        <label>Commercial Product Link</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_AUD_to_EUR__c</fullName>
        <defaultValue>0.667</defaultValue>
        <label>Conversion Rate AUD to EUR</label>
        <precision>10</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_CNY_to_EUR__c</fullName>
        <defaultValue>0.12048192</defaultValue>
        <label>Conversion Rate CNY to EUR</label>
        <precision>10</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_USD_to_EUR__c</fullName>
        <defaultValue>0.826</defaultValue>
        <inlineHelpText>For CRM Admin: updating the conversion rate default value only impacts future price entries. E.g. Current Opportunity Pipeline Reporting or won opportunity amounts are not impacted by changing the value.</inlineHelpText>
        <label>Conversion Rate USD to EUR</label>
        <precision>10</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Currency__c</fullName>
        <label>Commercial Product Default Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EUR</fullName>
                    <default>true</default>
                    <label>EUR</label>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID2__c</fullName>
        <formula>Id</formula>
        <label>ID2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Scope_Of_Business_Partner_Commission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CR#40129181</description>
        <label>In Scope Of Business Partner Commission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_scope_of_Sales_alert_report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In scope of Sales alert report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoicing_Scheme__c</fullName>
        <description>CR#40129181</description>
        <label>Invoicing Scheme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-Time Fee</fullName>
                    <default>true</default>
                    <label>One-Time Fee</label>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
                <value>
                    <fullName>Monthly Fee</fullName>
                </value>
                <value>
                    <fullName>Yearly Fee Prorated First Year</fullName>
                </value>
                <value>
                    <fullName>Yearly Fee With Anniversary Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Quotation_Tool_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Quotation Tool Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Learning_Channel_And_Market__c</fullName>
        <description>LearningChannel-Market fields. Should match with the fields received in the Opportunity.</description>
        <label>Learning Channel And Market</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15-bus</fullName>
                </value>
                <value>
                    <fullName>14-bus</fullName>
                </value>
                <value>
                    <fullName>12-bus</fullName>
                </value>
                <value>
                    <fullName>0-bus</fullName>
                </value>
                <value>
                    <fullName>15-tec</fullName>
                </value>
                <value>
                    <fullName>14-tec</fullName>
                </value>
                <value>
                    <fullName>12-tec</fullName>
                </value>
                <value>
                    <fullName>0-tec</fullName>
                </value>
                <value>
                    <fullName>15-0</fullName>
                </value>
                <value>
                    <fullName>14-0</fullName>
                </value>
                <value>
                    <fullName>12-0</fullName>
                </value>
                <value>
                    <fullName>0-0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>More_Product_Details__c</fullName>
        <label>More Product Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBI_Category__c</fullName>
        <description>GDF 23/11 Added for Comp Plan.
ALH 12/2014 : aligned with Dream</description>
        <label>CHEOPS L1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NBI</fullName>
                </value>
                <value>
                    <fullName>Connectivity</fullName>
                </value>
                <value>
                    <fullName>Interface</fullName>
                </value>
                <value>
                    <fullName>Shared Services</fullName>
                </value>
                <value>
                    <fullName>Software and Connectivity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Services and Support</fullName>
                </value>
                <value>
                    <fullName>Interfaces and Connectivity</fullName>
                </value>
                <value>
                    <fullName>Messaging Services</fullName>
                </value>
                <value>
                    <fullName>Messaging and MIs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_or_low_amount_allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No or low amount allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OperationalServicePackage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If flagged, Support managers are notified on new service contract including that product, related contract influence case routing</inlineHelpText>
        <label>Operational Service Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Process__c</fullName>
        <label>Opportunity Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard process</fullName>
                    <default>true</default>
                    <label>Standard process</label>
                </value>
                <value>
                    <fullName>Professional Service process</fullName>
                </value>
                <value>
                    <fullName>Suitability Assessment process</fullName>
                </value>
                <value>
                    <fullName>Advanced Support and Care Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Phone__c</fullName>
        <formula>User_Product_Owner__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_email__c</fullName>
        <formula>User_Product_Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner E-mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_of_SWIFT_Sales_Rep_Targets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CR #40119085</description>
        <label>Part of SWIFT Sales Rep Targets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Points_Ratio__c</fullName>
        <description>The Points per 100k that are applicable for this product
// 31/1/11: NOT USED AT THE MOMENT</description>
        <label>Points Ratio</label>
        <precision>18</precision>
        <scale>16</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>CR#40131262</description>
        <inlineHelpText>L4 Product Group</inlineHelpText>
        <label>CHEOPS L4</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3Skey</fullName>
                </value>
                <value>
                    <fullName>Accord</fullName>
                </value>
                <value>
                    <fullName>Advanced Support</fullName>
                </value>
                <value>
                    <fullName>Advisory Services-Other</fullName>
                    <label>Advisory Services</label>
                </value>
                <value>
                    <fullName>Alliance Access &amp; Other options</fullName>
                </value>
                <value>
                    <fullName>Alliance Cloud</fullName>
                </value>
                <value>
                    <fullName>Alliance Connect and Other Connections</fullName>
                </value>
                <value>
                    <fullName>Alliance Connect - Everywhere</fullName>
                </value>
                <value>
                    <fullName>Alliance Connect - Other</fullName>
                </value>
                <value>
                    <fullName>Alliance Entry</fullName>
                </value>
                <value>
                    <fullName>Alliance Gateway</fullName>
                </value>
                <value>
                    <fullName>Alliance Gateway Instant</fullName>
                </value>
                <value>
                    <fullName>Alliance Lifeline</fullName>
                </value>
                <value>
                    <fullName>Alliance Lite</fullName>
                </value>
                <value>
                    <fullName>Alliance Lite2</fullName>
                </value>
                <value>
                    <fullName>Alliance Managed Operations (AMO)</fullName>
                </value>
                <value>
                    <fullName>Alliance Remote Gateway</fullName>
                </value>
                <value>
                    <fullName>Alliance Warehouse</fullName>
                </value>
                <value>
                    <fullName>AMH</fullName>
                </value>
                <value>
                    <fullName>AMH Consulting</fullName>
                </value>
                <value>
                    <fullName>AML</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>AU NPP</fullName>
                </value>
                <value>
                    <fullName>BI for Accord</fullName>
                </value>
                <value>
                    <fullName>BI for Securities</fullName>
                </value>
                <value>
                    <fullName>BI -  new Business Development</fullName>
                </value>
                <value>
                    <fullName>Browse</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Business Learning Services</fullName>
                </value>
                <value>
                    <fullName>Channels and options</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Owner_Email__c</fullName>
        <formula>Product_Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Owner Email</label>
        <type>Text</type>
    </fields>
</CustomObject>